# cpp-experiments

./: .clangd  .gitignore  .gitmodules  LICENSE  Makefile  README.md  crack-archive.cpp  json.cpp  minesweeper.cpp  vignere-cipher.cpp
ai/: CMakeLists.txt  create_embeddings.cpp  embedding.cpp  extract_functions.cpp  query-rag.cpp  query_rag.cpp  sqlite-rag.cpp  ts-workspace-functions.cpp
calc/: .clang-format  .gitignore  CMakeLists.txt  README.md  coverage.html
calc/cmake/: CalcConfig.cmake.in  Format.cmake
calc/src/: CMakeLists.txt  evaluator.cc  parser.cc  tokenizer.cc
calc/src/apps/: CMakeLists.txt  calc_cli.cc  calc_gui.cc
calc/src/include/: parser.h  token.h  tokenizer.h
calc/src/libs/: CMakeLists.txt  calculator.cc  evaluator.cc  parser.cc  tokenizer.cc
calc/src/libs/bindings/: CMakeLists.txt
calc/src/libs/bindings/c/: CMakeLists.txt  calc_c_api.cc  calc_c_api.h
calc/src/libs/bindings/javascript/: CMakeLists.txt  calc_js_api.cc  calculator.html  calculator.js  calculator.wasm
calc/src/libs/bindings/python/: CMakeLists.txt  setup.py
calc/src/libs/bindings/python/calc/: __init__.py
calc/src/libs/core/: CMakeLists.txt  parser.cc  tokenizer.cc
calc/src/libs/core/include/calc/: parser.h  tokenizer.h
calc/src/libs/include/: calculator.h  evaluator.h  parser.h  token.h  tokenizer.h
calc/src/libs/include/calc/: calculator.h  token.h
calc/test/: CMakeLists.txt  calculator_test.cc  evaluator_test.cc  parser_test.cc  tokenizer_test.cc
cgit/: CMakeLists.txt  README.md  main.cpp
cgit/include/: CommandHandler.hpp  GitIgnore.hpp  GitIndex.hpp  GitObjects.hpp  GitPack.hpp  GitRepository.hpp  utils.hpp
cgit/src/: CommandHandler.cpp  GitIgnore.cpp  GitIndex.cpp  GitObjects.cpp  GitPack.cpp  GitRepository.cpp  utils.cpp
cli/: CMakeLists.txt  Makefile  README.md  argparse.hpp  ascii-art.cpp  bitcask.cpp  cdiff.cpp  cgit.cpp  csh.cpp  ctar.cpp  cuniq.cpp  cwc.cpp  cxxd.cpp  spellcheck.cpp
cryptography/: CMakeLists.txt  Makefile  README.md  hashlib-bench.cpp  hashlib.hpp  rot-cipher.cpp
design-patterns/: README.md  factory.cpp  prototype.cpp
design-patterns/behavioral-patterns/: README.md  chain-of-responsibility.cpp  command.cpp  interpreter.cpp  iterator.cpp  mediator.cpp  momento.cpp  observer.cpp  state.cpp  strategy.cpp  template.cpp  visitor.cpp
design-patterns/creational-patterns/: README.md  abstract-factory.cpp  builder.cpp  factory.cpp  object-pool.cpp  prototype.cpp  singleton.cpp
design-patterns/structural-patterns/: README.md  adapter.cpp  bridge.cpp  composite.cpp  proxy.cpp  (+3 more)
finance/: ma-backtester.cpp
json-parser/: CMakeLists.txt  Makefile  README.md  create-json.cpp  example-document.cpp  json.hpp  manipulate-json.cpp  validate-json.cpp
json-parser/test/: bench01.json
memory-mangement/: README.md  arena_allocator.cpp  fwd_list_alloc_support.hpp  fwd_list_explicit_mem.hpp  fwd_list_implicit_mem.hpp  gc_at_program_end.cpp  gc_trivially_dest.cpp  leak_detector.hpp  unique_ptr.hpp
misc/: CMakeLists.txt  CSVUtil.hpp  Makefile  README.md  ThreadPool.cpp  ThreadPool.hpp  XMLUtil.cpp  argparse-test.cpp  ascii-art.cpp  barcode.cpp  bigint.hpp  bounded_integer.hpp  brainfuck.cpp  cache.cpp  cache.hpp  cdiff.cpp  cjudge.cpp  csvbucket.cpp  csvsplit.cpp  diff.cpp  fc.cpp  fnmatch.hpp  fwd_list_explicit_mem.hpp  fwd_list_implicit_mem.hpp  gc_at_scope_end.cpp  grid2png.cpp  iniparser.hpp  linear-regression.cpp  logger.hpp  mandelbrot.cpp  matrix.cpp  missile-sim.cpp  ordered_map.hpp  png_reader.hpp  sample.xml  shared_ptr.hpp  skyscrapers.cpp  split-csv.cpp  sqlite.hpp  sudoku.cpp  (+7 more)
misc/testdata/: sample.xml  test.tar
misc/tests/: argparse-test.cpp
misc/tests/testdata/: sample.tar
networking/: README.md  download-proxy.cpp  examples.cpp  heartbeat.cpp  hello-socket-ssl.cpp  hello-socket.cpp  http-server.cpp  net-tests.cpp  net.hpp  serialization-test.cpp  socket-ssl.cpp  web-server.cpp
pacman/: CMakeLists.txt  Makefile  main.cpp
pacman/include/: Animation.hpp  BaseSprite.hpp  Constants.hpp  GhostManager.hpp  GhostStrategy.hpp  Sprites.hpp  Utils.hpp
pacman/src/: Animation.cpp  BaseSprite.cpp  GhostManager.cpp  GhostSprite.cpp  GhostStrategy.cpp  MiscSprites.cpp  PacmanSprite.cpp  Sprites.cpp  Utils.cpp
puzzles/: .clangd  Dockerfile.queens  Makefile  Queens.Dockerfile  README.md  queens.cpp
redis-server/: CMakeLists.txt  Makefile  Node.hpp  README.md  Server.cpp  main.cpp
redis-server/include/: Cache.hpp  CommandHandler.hpp  Node.hpp  Server.hpp  Utils.hpp
redis-server/src/: Cache.cpp  CommandHandler.cpp  Node.cpp  Server.cpp  Utils.cpp
redis-server/test/: expiry-test.cpp  serialize-test.cpp
sfml/: Makefile  basic-animation.cpp  basic-sprite.cpp  bounded-pacman.cpp  grid2png.cpp
torrent/: CMakeLists.txt  Dockerfile  README.md  bencode.cpp  ctorrent.cpp  main.cpp
torrent/include/: bencode.hpp  common.hpp  disk_writer.hpp  peer_context.hpp  piece_manager.hpp  protocol.hpp  torrent_downloader.hpp  torrent_file.hpp  torrent_tracker.hpp
torrent/src/: bencode.cpp  common.cpp  disk_writer.cpp  piece_manager.cpp  protocol.cpp  torrent_downloader.cpp  torrent_file.cpp  torrent_tracker.cpp
url-shortner/: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
url-shortner/include/: HashUtils.hpp  RequestHandler.hpp  Server.hpp
url-shortner/src/: HashUtils.cpp  RequestHandler.cpp  Server.cpp
url-shortner/static/: index.html
url-shortner/static/css/: index.css
url-shortner/static/js/: index.js
video-chat/: CMakeLists.txt  main.cpp
webdriverxx/: CMakeLists.txt  README.md  compile_commands.json
webdriverxx/examples/: CMakeLists.txt  github.cpp  screener.cpp
webdriverxx/include/: base64.hpp  webdriverxx.hpp
webdriverxx/include/webdriverxx/: capabilities.hpp  element.hpp  pageoptions.hpp  utils.hpp  webdriver.hpp
webdriverxx/test/: CMakeLists.txt  test_RAII_driverquit.cpp  test_alerts.cpp  test_base64.cpp  test_config.hpp  test_cookies.cpp  test_findElement_sendKeys.cpp  test_findElements.cpp  test_maximize_minimize.cpp  test_navigate.cpp  test_screenshot.cpp  test_startSession.cpp  test_timeouts.cpp
